<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/DayPicker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Switch
        android:id="@+id/Monday"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/monday" />

    <Switch
        android:id="@+id/Tuesday"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/tuesday" />

    <Switch
        android:id="@+id/Wednesday"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/wednesday" />

    <Switch
        android:id="@+id/Thursday"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/thursday" />

    <Switch
        android:id="@+id/Friday"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/friday" />

    <Switch
        android:id="@+id/Saturday"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/saturday" />

    <Switch
        android:id="@+id/Sunday"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/sunday" />

    <LinearLayout
        android:id="@+id/NumPicker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/First"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1st" />

        <Switch
            android:id="@+id/Second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2nd" />

        <Switch
            android:id="@+id/Third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3rd" />

        <Switch
            android:id="@+id/Fourth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4th" />

        <Switch
            android:id="@+id/Fifth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5th" />
    </LinearLayout>
</LinearLayout>